# ros_pcl

src/: CMakeLists.txt  package.xml
src/include/: frustum.h  memory.h  pclUtils.ipp
src/inspection_plan/: inspection_plan.xml
src/launch/: fmbot.launch  gazebo_amcl.launch  kobuki.launch.NormalCamera.xml  kobuki.launch.WithPoleCamera.xml  move_real_turtlebot.launch  real_robot_amcl.launch  realworld_amcl.launch  road_construction.launch  rplidar_amcl.launch  turtlebot_pki_simulation.launch
src/maps/: RoomCoordinates.ods  building_world.yaml  pki.facility.org  pki.yaml
src/robots/: kobuki_withPoleCamera.astra.urdf.xacro  kobuki_withPoleCamera.asus.urdf.xacro
src/rviz/: amcl_navigation.rviz
src/src/: PeopleLocalizer.cpp  PeopleObserver.cpp  convexHull.cpp  culling.cpp  facilityManagementPlan.cpp  frustum.cpp  inspection_bot.cpp  inventoryClerk.cpp  move_base.cpp  people_observer.cpp  segmentation_pipeline.cpp  yolo_action_client.cpp
src/srv/: move_base_request.srv
src/urdf/: pole_camera.xacro
src/world/: building_monitor.world  building_monitor_no_item.world  building_monitor_with_item.world
src/worlds/: PKI_World_Descriptions.org  my_office_with_items.ORIG  pki.01.world  pki.02.world  pki.03.world  pki.03b.world  pki.world  road_construction_site.world
