<package>
  <name>pki_simulation</name>
  <version>0.1.1</version>
  <description>pki_simulation is a simulation of the PKI building</description>
  <maintainer email="matt.peavy@unl.edu">UNL Robotics</maintainer>
  <license>BSD</license>
  <url type="website">http://unl.edu</url>
  <url type="repository">https://gitlab.com/mpeavy/purezasim</url>
  <url type="bugtracker">https://gitlab.com/mpeavy/purezasim/bugtracker</url>
  <author>Matthew D. Peavy</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>  
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>Eigen3</run_depend>

  <export>
  </export>
  
</package>
